--- a/chasin-tails-menu/public/index.html
+++ b/chasin-tails-menu/public/index.html
@@ -4,17 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Catch of the Day</title>
+  <title>Menu Order App</title>
 </head>
 
 <body>
-  <input type="checkbox" id="fold">
-  <label for="fold">Fold</label>
-
   <div id="main">
     <!-- This is where our React app will go -->
+    <!-- Mounting will be done inside index.js -->
   </div>
-
 </body>
 
 </html>
